--- a/projects/mgw-mat-shell/src/lib/mgw-mat-shell.component.html
+++ b/projects/mgw-mat-shell/src/lib/mgw-mat-shell.component.html
@@ -17,14 +17,14 @@
     </mat-menu>
   </mat-toolbar>
 
-  <mat-sidenav-container class="shell-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+  <mat-sidenav-container class="shell-sidenav-container" [hasBackdrop]="hasBackdrop" [style.marginTop.px]="mobileQuery.matches ? fixedTopGap ?? fixedTopGapDef : 0">
     <mat-sidenav
       #snav
       [mode]="forceMode ?? (mobileQuery.matches ? forceModeMobile ?? sidenavModeMobile : forceModeDesktop ?? sidenavModeDesktop)"
       [disableClose]="sidenavDisableClose"
       [fixedInViewport]="mobileQuery.matches"
-      fixedTopGap="56"
-      [(opened)]="isSidenavOpened"
+      [fixedTopGap]="fixedTopGap ?? fixedTopGapDef"
+      [opened]="sidenavOpen$ | async"
       (openedStart)="sidenavOpenedStart()"
       (openedChange)="sidenavOpenedChange($event)">
       <mat-nav-list>
